@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-09T08:10:35Z",
+  "timestamp" : "2022-05-09T16:11:09Z",
   "count_outdated" : 1050,
   "uniques_outdated" : 67,
-  "count" : 1423,
-  "uniques" : 76,
+  "count" : 1428,
+  "uniques" : 77,
   "views" : [
     {
       "timestamp": "2022-04-30T00:00:00Z",
@@ -58,6 +58,13 @@
       "timestamp": "2022-05-08T00:00:00Z",
       "count": 27,
       "count_minmax": [ 0, 27 ],
+      "uniques": 1,
+      "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-05-09T00:00:00Z",
+      "count": 5,
+      "count_minmax": [ 0, 5 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
