@@ -1,5 +1,5 @@
 {
-  "count": 373,
+  "count": 378,
   "uniques": 2,
   "views": [
     {
@@ -40,6 +40,11 @@
     {
       "timestamp": "2022-05-08T00:00:00Z",
       "count": 27,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-09T00:00:00Z",
+      "count": 5,
       "uniques": 1
     }
   ]
