@@ -1,3 +1,9 @@
+2022-05-09T16:11:09Z:
+* notice: last 14d: all unq: 378 2
+* notice: prev accum: outdated-all outdated-unq / all unq: 1050 67 / 1423 76
+* notice: next accum: outdated-all outdated-unq / all unq: 1050 67 / 1428 77
+* notice: prev json diff // prev day diff: unq all: +1 +5 / -0 -0 // +1 +6 / -0 -0
+
 2022-05-09T08:10:35Z:
 * notice: last 14d: all unq: 373 2
 * notice: prev accum: outdated-all outdated-unq / all unq: 1048 66 / 1423 76
